# Singularity-Zero

./: .coverage.LAPTOP-FFGPOF0F.pid9640.XDPTz84x  .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .import-linter  .pre-commit-config.yaml  .pytest-temp.ini  .replit  .safety-policy.yml  .secrets.baseline  AUDIT_14_PROMPTS.md  BENCHMARK.md  CHANGES.md  CONTRIBUTING.md  DEEP_STRATEGIC_ANALYSIS.md  Dockerfile  Dockerfile.optimized  GEMINI.md  LICENSE  MAJOR_UPDATE_PROMPTS.md  Makefile  README.md  SECURITY.md  SECURITY_ROTATION_CHECKLIST.md  THIRD-PARTY.md  TODO.md  _audit_runner.py  _cockpit_backup.tsx  alembic.ini  analyze_coverage.py  apply_edits.py  apply_fixes_part2.py  apply_safe_close_guard.py  audit_bug1.py  audit_bug1b.py  audit_bug1c.py  audit_bug3.py  audit_bug8.py  (+93 more)
.ai/: capability_manifest.json  performance_model.json  policy.yaml  remediation_logic.json
.ai/schemas/: finding.schema.json  pipeline_input.schema.json  stage_input.schema.json  stage_output.schema.json
.ai/workflows/: improvement_workflow.yaml
.benchmarks/: PERFORMANCE_REPORT.md  baseline.json  optimized.json  performance_report.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_vulnerability.yml
.github/workflows/: auto-push-fixes.yml  ci.yml  dast.yml  mutation.yml  publish.yml  release.yml
.kilo/: agent-manager.json  kilo.json
.kilo/plans/: 1777750168-shiny-falcon.md  1778163286944-lucky-falcon.md
.playwright-mcp/: page-2026-05-21T13-09-40-507Z.yml  page-2026-05-21T13-09-53-890Z.yml  page-2026-05-21T13-10-05-740Z.yml  page-2026-05-21T13-11-52-638Z.yml
.scripts/: debug_providers.py
.zap/: rules.tsv
_launcher/job1/: stop_requested.marker
alembic/: env.py
alembic/versions/: .gitkeep
attached_assets/: Pasted---1779115536205_1779115536206.txt  Pasted-Run-mypy-script-fix-excepts-py-6-error-Function-is-miss_1778776928712.txt  Pasted-Run-npx-eslint-src-home-runner-work-Singularity-Zero-Si_1778776853950.txt  Pasted-Run-npx-eslint-src-home-runner-work-Singularity-Zero-Si_1778877037048.txt  Pasted-Run-pytest-cov-cov-report-xml-cov-report-term-missing-v_1778774322374.txt  Pasted-Run-pytest-cov-cov-report-xml-cov-report-term-missing-v_1778776898264.txt  Pasted-Run-pytest-cov-cov-report-xml-cov-report-term-missing-v_1779078254606.txt  Pasted-Run-ruff-check-warning-Invalid-noqa-directive-on-src-an_1778777046225.txt
configs/: README.md  api_keys.example.json  config.example.json  config.json  config.schema.json  openapi-baseline.json  prometheus-docker.yml  runtime_audit_quick.json  runtime_postprobe_success.json  runtime_postprobe_timeout_repro.json  runtime_postprobe_timeout_scope.txt  sbom-baseline.json  scope.example.txt  square_bounty.json  square_scope.txt
deploy/: prometheus-docker.yml
deploy/kubernetes/: configmap.yaml  dashboard.yaml  ingress.yaml  namespace.yaml  redis.yaml  secrets.yaml  worker.yaml
docs/: EVOLUTION_ALPHA_PLAN.md  FAILURE_MODES.md  GAP_ANALYSIS.md  OBSERVABILITY_CATALOG.md  PIPELINE_ORCHESTRATION_ANALYSIS.md  api-reference.md  architecture-overview.md  architecture.md  ci-cd-integration.md  codebase.md  commands.md  deployment.md  dynamic-plugins.md  environment-variables.md  frontend.md  frontier-decomposition-plan.md  getting-started.md  ghost_actor_recovery_evidence.md  glossary.md  index.md  multi-region.md  performance.md  testing.md  troubleshooting.md
docs/architecture/: cache-unification.md
docs/archive/: AUDIT_14_PROMPTS.md  CHANGELOG.md  MAJOR_UPDATE_PROMPTS.md  bug1_precursor.txt  change.md
docs/assets/: architecture.mmd  sequence-full-run.mmd
docs/examples/: dynamic_header_echo.py
frontend/: .size-limit.json  UI_OVERHAUL_PLAN.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/.storybook/: preview.tsx
frontend/docs/: animation-architecture.md  copy-guidelines.md
frontend/scripts/: check-animation-budget.mjs  copy-guard.mjs  download-fonts.mjs  patch_ts_errors.py  write_modal.py
frontend/src/: App.tsx  config.ts  global.d.ts  index.css  main.tsx  shims.d.ts
frontend/test-results/: .last-run.json
helm/cyber-pipeline/: Chart.yaml  values.yaml
scripts/: _write_modules.py  analyze_analyzer_performance.py  analyze_frontend_deps.py  analyze_frontier.py  analyzer_performance_report.py  benchmark_performance.py  check_imports.py  dev-start.ps1  download-tools.ps1  download-tools.sh  export_openapi.py  find_lines.py  find_password_refs.py  fix_exception_commas.py  fix_links.py  generate_analyzer_metrics.py  grep_bugs.py  import_smoke.py  link_audit.ps1  pipeline.py  pipeline_stage_profile.py  profile_startup.py  remove_tracked_artifacts.ps1  run_aggregator_metrics_test.py  run_crawler_unit_test.py  run_square_dashboard_canary.py  run_wayback_retry_test.py  run_wayback_unit_test.py  stability_test.py  validate_openapi.py  validate_sbom.py  verify_a11y.py  verify_bundle_secrets.py  verify_dependency_pins.py
scripts/audit/: audit_bug1.py  audit_bug1b.py  audit_bug3.py  audit_full.py  audit_phase1.py  audit_phase2.py
scripts/debug/: dns_repro.py  run_scan_squareup.py
scripts/unix/: backup.sh  generate_sbom.sh  pipeline.sh  restore.sh
scripts/windows/: _list_packages.ps1  audit_dependencies.bat  filesizes.ps1  run_mutation_tests.bat
src/: cli.py
src/analysis/: __init__.py  accelerated_matcher.py  analyzer_results.py  catalog.py  endpoint_intelligence_scoring.py  fast_path.py  plugin_registration.py  plugin_runtime_models.py  probe_template.py  sqli_signals.py  text_utils.py
src/api_tests/: __init__.py  __main__.py  api_tester.py
src/cli/: __init__.py  types.py  ui.py
src/core/: __init__.py  accelerators.py  auto_filters.py  capabilities.py  checkpoint.py  constants.py  (+14 more)
tests/: conftest.py  factories.py  test_audit.py  test_chameleon.py  test_chameleon_evasion_benchmark.py  test_ghost_actor.py  test_ghost_vfs.py  test_marshaller.py  test_proc_pool.py  test_recovery_subsystem_upgrades.py  test_ring_bus.py  test_wal.py  test_wasm.py
(+2561 files in other folders)
