[project]
name = "cyber-security-test-pipeline"
version = "2.0.0"
description = "API security scanner with exploit verification and closed-loop remediation - validated findings from recon to report."
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "httpx==0.28.0",
    "aiohttp==3.14.0",
    "urllib3==2.7.0",
    "requests==2.33.0",
    "pydantic==2.12.0",
    "pydantic-settings==2.13.0",
    "pyyaml==6.0.3",
    "jinja2==3.1.6",
    "click==8.3.0",
    "rich==14.0.0",
    "loguru==0.7.3",
    "dnspython==2.8.0",
    "cryptography==46.0.7",
    "beautifulsoup4==4.14.0",
    "fastapi==0.136.3",
    "starlette==1.0.1",
    "uvicorn[standard]==0.30.0",
    "python-multipart==0.0.27",
    "email-validator==2.0.0",
    "sse-starlette==3.0.0",
    "redis[hiredis]==6.4.0",
    "websockets==15.0",
    "PyJWT==2.13.0",
    "prometheus-client==0.24.0",
    "opentelemetry-api==1.41.1",
    "opentelemetry-sdk==1.41.1",
    "opentelemetry-exporter-otlp-proto-http==1.41.1",
    "psutil==5.9.8",
    "sqlalchemy==2.0.30",
    "alembic==1.14.0",
    "aiosqlite==0.20.0",
    "numpy>=2.1.0",
    "Pillow==12.2.0",
    "networkx==3.0.0",
    "beartype==0.20.1",
    "mmh3==5.1.0",
    "argon2-cffi==23.1.0",
    "msgspec==0.21.1",
    "msgpack==1.0.0",
    "cloudpickle==3.0.0",
    "watchfiles==1.0.4",
    "scipy>=1.14.0",
    "pykka==4.0.0",
]

[project.scripts]
cstp = "src.cli:main"
cyber-pipeline = "src.pipeline.runtime:main"
cyber-worker = "src.infrastructure.queue.worker_lite:main"
cyber-dashboard-fastapi = "src.dashboard.fastapi.main:main"

[project.optional-dependencies]
dev = [
    "detect-secrets==1.5.0",
    "hypothesis>=6.151.0",
    "mutmut>=3.5.0",
    "mypy>=1.20.0",
    "pip-audit>=2.10.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-snapshot>=0.7.0",
    "ruff==0.15.*",
    "jsonschema>=4.0.0",
    "safety>=3.7.0",
    "vulture>=2.16",
    "bandit>=1.8.0",
    "cyclonedx-bom>=5.0.0",
    "import-linter>=2.0.0",
    "locust>=2.43.0",
    "pytest-benchmark>=5.0.0",
    "memory-profiler>=0.61.0",
    "line-profiler>=4.2.0",
]
ml = [
    "scipy>=1.14.0",
    "kuzu==0.11.3",
    "xgboost==2.0.0",
    "scikit-learn==1.5.0",
    "zstandard==0.22.0",
]
wasm = [
    "pykka==4.0.0",
    "wasmtime==44.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = "-v --tb=short --strict-markers --import-mode=importlib --cov=src.analysis --cov=src.core --cov=src.pipeline --cov=src.dashboard --cov=src.recon --cov=src.execution --cov=src.reporting --cov=src.intelligence --cov=src.detection --cov=src.decision --cov=src.fuzzing --cov=src.infrastructure.queue --cov=src.infrastructure.execution_engine --cov=src.infrastructure.cache --cov=src.infrastructure.observability --cov=src.infrastructure.security --cov=src.infrastructure.notifications --cov=src.dashboard.fastapi --cov=src.websocket_server --cov=src.learning --cov=src.exploitation"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "architecture: marks tests as architecture tests",
    "unit: marks tests as unit tests",
    "regression: marks tests as regression tests",
    "security: marks tests as security tests",
    "chaos: marks chaos tests requiring infrastructure (docker, redis, etc.)",
]
filterwarnings = []

[tool.coverage.run]
source = ["src.analysis", "src.core", "src.pipeline", "src.dashboard", "src.recon", "src.execution", "src.reporting", "src.intelligence", "src.detection", "src.decision", "src.fuzzing", "src.infrastructure.queue", "src.infrastructure.execution_engine", "src.infrastructure.cache", "src.infrastructure.observability", "src.infrastructure.security", "src.infrastructure.notifications", "src.dashboard.fastapi", "src.websocket_server", "src.learning", "src.exploitation"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "src/execution/validators/validators/*",
    "src/intelligence/feeds/*",
    "src/infrastructure/notifications/*",
    "scripts/audit/*",
    "scripts/debug/*",
    "scripts/read_job.py",
    "scripts/find_password_refs.py",
    "scripts/fix_bare_excepts.py",
    "scripts/pipeline_main.py",
    "start_backend.py"
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]
extend-exclude = [
    ".ai",
    ".benchmarks",
    ".hypothesis",
    ".kilo",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".venv-linux",
    "frontend",
    "output",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S601", "S603", "S607", "S608"]
ignore = [
    "E501",
    "BLE001",
    "S101",
    "S102",
    "S103",
    "S104",
    "S105",
    "S106",
    "S107",
    "S108",
    "S110",
    "S112",
    "S313",
    "S314",
    "S310",
    "S311",
    "S324",
    "E701",
    "E402",
    "N806",
    "N803",
    "N818",
    "UP042",
]

[tool.ruff.lint.isort]
known-first-party = ["src", "src.analysis", "src.core", "src.pipeline", "src.dashboard", "src.recon", "src.execution", "src.reporting", "src.intelligence", "src.detection", "src.decision", "src.fuzzing", "src.infrastructure", "src.infrastructure.queue", "src.infrastructure.cache", "src.infrastructure.execution_engine", "src.infrastructure.observability", "src.infrastructure.security", "src.websocket_server", "src.learning", "src.exploitation"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"tests/**/*.py" = ["S101", "S105", "S106", "S108", "S311", "N806", "N818", "S104"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "scripts/",
    "frontend/",
    "benchmarks/",
    "tmp_scratch/",
    "tmp_reports/",
    "tmp_.*.py",
    "import_audit.*.py",
    "circular_check.*.py",
    "analyze_coverage.py",
    "coverage_deep.py",
    "find_missing_inits.py",
    "fix_import_audit.py",
]
ignore_missing_imports = false
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "requests",
    "psutil",
    "msgpack",
    "defusedxml",
    "defusedxml.*",
    "yaml",
    "jsonschema",
    "scipy",
    "scipy.*",
    "reportlab",
    "reportlab.*",
    "google.cloud",
    "google.cloud.*",
    "boto3",
    "botocore",
    "botocore.*",
    "azure.*",
    "kuzu",
    "xgboost",
    "sklearn.*",
    "zstandard",
    "pykka",
    "wasmtime",
    "crcmod",
    "diff_match_patch",
    "playwright",
    "playwright.*",
    "h2",
    "h2.*",
    "structlog",
    "opentelemetry.exporter.otlp.proto.grpc.trace_exporter",
    "src.infrastructure.discovery.mdns",
    "src.analysis.endpoint_intelligence_scoring",
    "src.execution.steps.template",
    "src.core.models.pipeline_state",
    "websocket",
    "websocket.*",
    "_dummy_process",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "start_backend"
disallow_untyped_defs = false
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "src.infrastructure.queue.consumer_groups",
    "src.infrastructure.queue.execution_loop",
    "src.infrastructure.queue.task_handlers",
    "src.infrastructure.queue.rate_limiter",
]
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = [
    "src.infrastructure.queue.persistence",
]
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[build-system]
requires = ["setuptools>=68.0", "wheel", "Cython>=3.0.0,<3.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
